--- a/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -3,15 +3,200 @@
   <div id="content-wrapper" class="d-flex flex-column">
     <app-toolbar></app-toolbar>
     <app-container containerTitle="Gerenciar Usuários" containerPath="Gerencial">
-      <mat-tab-group>
+
+      <mat-tab-group #tabGroup>
+
+        <!-- SEARCH TAB -->
         <mat-tab label="Pesquisa">
-          <app-usuarios-pesquisa></app-usuarios-pesquisa>
+          <div class="search-group">
+            <div class="col-sm-11 p-0 d-flex">
+              <mat-form-field class="search-form-field col-sm-9" appearance="outline">
+                <mat-label>Digite o e-mail do usuário</mat-label>
+                <input matInput type="text" [(ngModel)]="searchEmailUser" id="searchEmailUser">
+                <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+                  <mat-icon>close</mat-icon>
+                </button>
+              </mat-form-field>
+              <button (click)="loadUserData()" id="mat-search-button" mat-raised-button color="primary"
+                class="mat-button-entry me-2" [disabled]="searchButtonLoading">
+                <div class="spinner">
+                  <mat-spinner *ngIf="searchButtonLoading" [diameter]="15"></mat-spinner>
+                  <span *ngIf="!searchButtonLoading" class="fa-solid fa-magnifying-glass me-1 w-20px"></span>
+                  Pesquisar
+                </div>
+              </button>
+              <button id="mat-add-button" mat-raised-button class="mat-button-entry create-button"
+                matTooltip="Novo Recurso" matTooltipPosition="above" (click)="tabGroup.selectedIndex=1"
+                (click)="addNewUser()"><span class="fa-solid fa-plus w-20px"></span></button>
+            </div>
+          </div>
+          <div class="search-table">
+            <div class="col-sm-11 search-table-content mat-elevation-z2">
+              <table class="col-sm-12" mat-table [dataSource]="dataSource" matSort matSortActive="Name"
+                matSortDirection="asc">
+
+                <!-- Email Column -->
+                <ng-container matColumnDef="Email">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuário </th>
+                  <td mat-cell *matCellDef="let row"> {{row.Email}} </td>
+                </ng-container>
+
+                <!-- Situation Column -->
+                <ng-container matColumnDef="Situation">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Situação </th>
+                  <td mat-cell *matCellDef="let row"> {{row.Situation}} </td>
+                </ng-container>
+
+                <!-- Id Hidden Column -->
+                <ng-container matColumnDef="ID">
+                  <th mat-header-cell [hidden]="show" *matHeaderCellDef mat-sort-header> ID </th>
+                  <td mat-cell [hidden]="show" *matCellDef="let row"> {{row.ID}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Options">
+                  <th mat-header-cell *matHeaderCellDef> </th>
+                  <td mat-cell *matCellDef="let row">
+                    <button mat-icon-button color="primary" title="Visualizar"><i class="fa-solid fa-pen-to-square"
+                        (click)="tabGroup.selectedIndex=1" (click)="editUser(row.ID)"></i></button>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+                <!-- Row shown when there is no matching data. -->
+                <tr class="mat-row" *matNoDataRow>
+                  <td class="mat-cell" colspan="2">Nenhum registro encontrado.</td>
+                </tr>
+              </table>
+
+              <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+            </div>
+          </div>
         </mat-tab>
+
+        <!-- REGISTER TAB -->
         <mat-tab label="Cadastro">
-          <app-usuarios-cadastro></app-usuarios-cadastro>
+          <form [formGroup]="userForm">
+            <div class="registration-group">
+              <div class="offset-sm-1 col-sm-11 p-0">
+
+                <mat-form-field [hidden]="true">
+                  <input matInput #NameIdUser formControlName="IdUser" id="IdUser" [(ngModel)]="IdUser">
+                </mat-form-field>
+
+                <div class="div-row-input">
+                  <mat-form-field appearance="fill" class="col-sm-11">
+                    <mat-label>Usuário</mat-label>
+                    <input type="text" #IdPerson formControlName="IdPerson" id="IdPerson" placeholder="Selecione o Usuário" aria-label="Number" matInput
+                      [matAutocomplete]="auto" required>
+                    <mat-autocomplete #auto="matAutocomplete">
+                      <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                        {{option}}
+                      </mat-option>
+                    </mat-autocomplete>
+                    <mat-icon matSuffix>search</mat-icon>
+                  </mat-form-field>
+                </div>
+
+                <div class="div-row-input">
+                  <mat-form-field appearance="fill" class="col-sm-11">
+                    <mat-label>E-mail</mat-label>
+                    <input matInput #Emailinput formControlName="Email" [maxlength]="255" placeholder="email@exemplo.com.br" id="Email"
+                      [(ngModel)]="Email" required>
+                  </mat-form-field>
+                </div>
+
+                <div class="div-row-input">
+                  <mat-form-field appearance="fill" class="col-sm-6">
+                    <mat-label>Função</mat-label>
+                    <mat-select formControlName="Function" id="Function" required>
+                      <mat-option value="S" selected>Administrador</mat-option>
+                      <mat-option value="A" selected>Aplicador</mat-option>
+                      <mat-option value="G" selected>Gerente</mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                </div>
+
+                <div class="div-row-input">
+                  <mat-form-field appearance="fill" class="col-sm-6">
+                    <mat-label>Situação</mat-label>
+                    <mat-select formControlName="Situation" id="Situation" required>
+                      <mat-option value="A" selected>Ativo</mat-option>
+                      <mat-option value="I">Inativo</mat-option>
+                    </mat-select>
+                  </mat-form-field>
+                </div>
+
+                <div class="div-row-input">
+                  <mat-form-field appearance="fill" class="col-sm-6">
+                    <mat-label>Senha</mat-label>
+                    <input type="password" matInput formControlName="Password" #PasswordInput [maxlength]="255" placeholder="Informe uma senha"
+                      id="Password" [(ngModel)]="Password" required>
+                  </mat-form-field>
+
+                  <mat-form-field appearance="fill" class="col-sm-5 ml-0">
+                    <mat-label>Confirmação de Senha</mat-label>
+                    <input type="password" matInput formControlName="ConfirmPassword" #ConfirmPasswordInput [maxlength]="255"
+                      placeholder="Confirme sua senha" id="ConfirmPassword" [(ngModel)]="ConfirmPassword" required>
+                  </mat-form-field>
+                </div>
+
+                <div class="div-row-input registration-button-row">
+                  <button mat-raised-button class="create-button"><span
+                      class="fa-solid fa-floppy-disk me-1 w-20px"></span><span>Criar</span></button>
+                  <button mat-raised-button class="create-button"><span
+                      class="fa-solid fa-user-check me-1 w-20px"></span><span>Ativar</span></button>
+                  <button mat-raised-button color="warn"><span
+                      class="fa-solid fa-user-slash me-1 w-20px"></span><span>Desativar</span></button>
+                  <button mat-raised-button color="primary"><span
+                      class="fa-solid fa-retweet me-1 w-20px"></span><span>Redefinir Senha</span></button>
+                </div>
+              </div>
+            </div>
+          </form>
         </mat-tab>
+
+        <!-- RESOURCE TAB -->
         <mat-tab label="Recursos">
-          <app-usuarios-recursos></app-usuarios-recursos>
+          <div class="search-table">
+            <div class="col-sm-11 search-table-content mat-elevation-z2">
+              <table class="col-sm-12" mat-table [dataSource]="dataSource2" matSort matSortActive="Name"
+                matSortDirection="asc">
+
+                <!-- Resource Column -->
+                <ng-container matColumnDef="Name">
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Recurso </th>
+                  <td mat-cell *matCellDef="let row"> {{row.Name}} </td>
+                </ng-container>
+
+                <!-- Id Hidden Column -->
+                <ng-container matColumnDef="ID">
+                  <th mat-header-cell [hidden]="show" *matHeaderCellDef mat-sort-header> ID </th>
+                  <td mat-cell [hidden]="show" *matCellDef="let row"> {{row.ID}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="Options">
+                  <th mat-header-cell *matHeaderCellDef> </th>
+                  <td mat-cell *matCellDef="let row">
+                    <button mat-icon-button color="primary" title="Editar"><i class="fa-solid fa-pen-to-square"
+                        ></i></button>
+                  </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns2"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns2;"></tr>
+
+                <!-- Row shown when there is no matching data. -->
+                <tr class="mat-row" *matNoDataRow>
+                  <td class="mat-cell" colspan="2">Nenhum registro encontrado.</td>
+                </tr>
+              </table>
+
+              <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+            </div>
+          </div>
+          
           <button mat-fab id="add-phone-btn" class="float-btn create-button" (click)="openAddScreensDialog()"
             aria-label="Add button" matTooltip="Inserir Recursos" matTooltipPosition="above">
             <mat-icon>add</mat-icon>
