--- a/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -82,17 +82,18 @@
               <div class="offset-sm-1 col-sm-11 p-0">
 
                 <mat-form-field [hidden]="true">
-                  <input matInput #NameIdUser formControlName="IdUser" id="IdUser" [(ngModel)]="IdUser">
+                  <input matInput #NameIdUser formControlName="UserId" id="UserId" [(ngModel)]="UserId">
                 </mat-form-field>
 
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-11">
                     <mat-label>Usuário</mat-label>
-                    <input type="text" #IdPerson formControlName="IdPerson" id="IdPerson" placeholder="Selecione o Usuário" aria-label="Number" matInput
-                      [matAutocomplete]="auto" required>
+                    <input type="text" (click)="searchPersonByAutoComplete()" id="PersonId"
+                      placeholder="Selecione a Pessoa" aria-label="Number" matInput formControlName="PersonId"
+                      [matAutocomplete]="auto" [(ngModel)]="PersonId" required>
                     <mat-autocomplete #auto="matAutocomplete">
-                      <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                        {{option}}
+                      <mat-option *ngFor="let option of filteredOptions | async" [value]="option.ID">
+                        {{option.Name}}
                       </mat-option>
                     </mat-autocomplete>
                     <mat-icon matSuffix>search</mat-icon>
@@ -102,17 +103,17 @@
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-11">
                     <mat-label>E-mail</mat-label>
-                    <input matInput #Emailinput formControlName="Email" [maxlength]="255" placeholder="email@exemplo.com.br" id="Email"
-                      [(ngModel)]="Email" required>
+                    <input matInput #Emailinput formControlName="Email" [maxlength]="255"
+                      placeholder="email@exemplo.com.br" id="Email" [(ngModel)]="Email" required>
                   </mat-form-field>
                 </div>
 
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-6">
                     <mat-label>Função</mat-label>
-                    <mat-select formControlName="Function" id="Function" required>
-                      <mat-option value="S" selected>Administrador</mat-option>
-                      <mat-option value="A" selected>Aplicador</mat-option>
+                    <mat-select formControlName="FunctionUser" id="FunctionUser" [(ngModel)]="FunctionUser" required>
+                      <mat-option value="A" selected>Administrador</mat-option>
+                      <mat-option value="E" selected>Aplicador</mat-option>
                       <mat-option value="G" selected>Gerente</mat-option>
                     </mat-select>
                   </mat-form-field>
@@ -121,7 +122,7 @@
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-6">
                     <mat-label>Situação</mat-label>
-                    <mat-select formControlName="Situation" id="Situation" required>
+                    <mat-select formControlName="Situation" id="Situation" [(ngModel)]="Situation" required>
                       <mat-option value="A" selected>Ativo</mat-option>
                       <mat-option value="I">Inativo</mat-option>
                     </mat-select>
@@ -131,25 +132,32 @@
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-6">
                     <mat-label>Senha</mat-label>
-                    <input type="password" matInput formControlName="Password" #PasswordInput [maxlength]="255" placeholder="Informe uma senha"
-                      id="Password" [(ngModel)]="Password" required>
+                    <input type="password" matInput formControlName="Password" #PasswordInput [maxlength]="255"
+                      placeholder="Informe uma senha" id="Password" [(ngModel)]="Password" required>
                   </mat-form-field>
 
                   <mat-form-field appearance="fill" class="col-sm-5 ml-0">
                     <mat-label>Confirmação de Senha</mat-label>
-                    <input type="password" matInput formControlName="ConfirmPassword" #ConfirmPasswordInput [maxlength]="255"
-                      placeholder="Confirme sua senha" id="ConfirmPassword" [(ngModel)]="ConfirmPassword" required>
+                    <input type="password" matInput formControlName="ConfirmPassword" #ConfirmPasswordInput
+                      [maxlength]="255" placeholder="Confirme sua senha" id="ConfirmPassword"
+                      [(ngModel)]="ConfirmPassword" required>
                   </mat-form-field>
                 </div>
 
-                <div class="div-row-input registration-button-row">
-                  <button mat-raised-button class="create-button"><span
-                      class="fa-solid fa-floppy-disk me-1 w-20px"></span><span>Criar</span></button>
-                  <button mat-raised-button class="create-button"><span
+                <div class="div-row-input registration-button-row d-flex">
+                  <button mat-raised-button class="create-button" (click)="createUpdateUser()" type="button"
+                    [disabled]="createButtonLoading">
+                    <div class="spinner">
+                      <mat-spinner *ngIf="createButtonLoading" [diameter]="15"></mat-spinner>
+                      <span *ngIf="!createButtonLoading" class="fa-solid fa-floppy-disk me-1 w-20px"></span>
+                      Salvar
+                    </div>
+                  </button>
+                  <button mat-raised-button class="create-button" id="btn-activate-user"><span
                       class="fa-solid fa-user-check me-1 w-20px"></span><span>Ativar</span></button>
-                  <button mat-raised-button color="warn"><span
+                  <button mat-raised-button color="warn" id="btn-disable-user"><span
                       class="fa-solid fa-user-slash me-1 w-20px"></span><span>Desativar</span></button>
-                  <button mat-raised-button color="primary"><span
+                  <button mat-raised-button color="primary" id="btn-reset-password-user"><span
                       class="fa-solid fa-retweet me-1 w-20px"></span><span>Redefinir Senha</span></button>
                 </div>
               </div>
@@ -179,8 +187,8 @@
                 <ng-container matColumnDef="Options">
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td mat-cell *matCellDef="let row">
-                    <button mat-icon-button color="primary" title="Editar"><i class="fa-solid fa-pen-to-square"
-                        ></i></button>
+                    <button mat-icon-button color="primary" title="Editar"><i
+                        class="fa-solid fa-pen-to-square"></i></button>
                   </td>
                 </ng-container>
 
@@ -196,7 +204,7 @@
               <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
             </div>
           </div>
-          
+
           <button mat-fab id="add-phone-btn" class="float-btn create-button" (click)="openAddScreensDialog()"
             aria-label="Add button" matTooltip="Inserir Recursos" matTooltipPosition="above">
             <mat-icon>add</mat-icon>
