--- a/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -226,8 +226,7 @@
                 <ng-container matColumnDef="Options">
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td mat-cell *matCellDef="let row">
-                    <button mat-icon-button color="warn" title="Excluir" style="float:right;"><i class="fa-solid fa-trash"></i></button>
-                    <button mat-icon-button color="primary" title="Editar" style="float:right;"><i class="fa-solid fa-pen-to-square"></i></button>
+                    <button mat-icon-button color="warn" title="Remover" (click)="findUserResourceToDelete(row.ID)" style="float:right;"><i class="fa-solid fa-trash"></i></button>
                   </td>
                 </ng-container>
 
