--- a/VaccineC/src/app/pages/gerenciar-usuarios/user-resource-add-dialog.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/user-resource-add-dialog.html
@@ -1,10 +1,15 @@
 <h2 mat-dialog-title>Recurso</h2>
 <mat-dialog-content class="mat-typography">
-  <form>
+  <form [formGroup]="userResourceForm">
     <div class="div-row-input">
+
+      <mat-form-field [hidden]="true">
+        <input matInput formControlName="UsersId" id="UsersId" [(ngModel)]="UsersId">
+    </mat-form-field>
+
       <mat-form-field appearance="fill" class="col-sm-12">
         <mat-label>Recurso</mat-label>
-        <input type="text" (click)="searchResourceByAutoComplete()" id="resourceId" placeholder="Selecione o Recurso"
+        <input type="text" (click)="searchResourceByAutoComplete()" [(ngModel)]="ResourcesId" formControlName="ResourcesId" id="ResourcesId" placeholder="Selecione o Recurso"
           aria-label="Number" matInput [formControl]="myControl" [matAutocomplete]="auto" required>
         <mat-autocomplete #auto="matAutocomplete">
           <mat-option *ngFor="let option of filteredOptions | async" [value]="option.ID">
@@ -18,5 +23,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancelar</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Salvar</button>
+  <button mat-button cdkFocusInitial (click)="saveUserResource()">Salvar</button>
 </mat-dialog-actions>
