--- a/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -72,7 +72,7 @@
 
                 <!-- Row shown when there is no matching data. -->
                 <tr class="mat-row" *matNoDataRow>
-                  <td class="mat-cell" colspan="2">Nenhum registro encontrado.</td>
+                  <td class="mat-cell" colspan="4">Nenhum registro encontrado.</td>
                 </tr>
               </table>
 
@@ -135,7 +135,7 @@
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-6">
                     <mat-label>Situação</mat-label>
-                    <mat-select formControlName="Situation" #SituationInput id="Situation" [(ngModel)]="Situation" required>
+                    <mat-select [disabled]="isSituationDisabled" formControlName="Situation" #SituationInput id="Situation" [(ngModel)]="Situation" required>
                       <mat-option value="A" selected>Ativo</mat-option>
                       <mat-option value="I">Inativo</mat-option>
                     </mat-select>
@@ -148,7 +148,7 @@
                 <div class="div-row-input">
                   <mat-form-field appearance="fill" class="col-sm-6">
                     <mat-label>Senha</mat-label>
-                    <input type="password" matInput #PasswordInput formControlName="Password" [maxlength]="255" placeholder="Informe uma senha" id="Password" [(ngModel)]="Password" required>
+                    <input type="password" [readonly]="isPasswordReadOnly" matInput #PasswordInput formControlName="Password" [maxlength]="255" placeholder="Informe uma senha" id="Password" [(ngModel)]="Password" required>
                     <mat-hint align="end">{{PasswordInput.value?.length || 0}}/255</mat-hint>
                     <mat-error *ngIf="userForm.controls.Password.touched && userForm.controls.Password.invalid">
                         <span *ngIf="userForm.controls.Password.errors?.required">A Senha é obrigatória.</span>
@@ -158,7 +158,7 @@
 
                   <mat-form-field appearance="fill" class="col-sm-5 ml-0">
                     <mat-label>Confirmação de Senha</mat-label>
-                    <input type="password" matInput #ConfirmPasswordInput formControlName="ConfirmPassword" [maxlength]="255" placeholder="Confirme sua senha" id="ConfirmPassword" [(ngModel)]="ConfirmPassword" required>
+                    <input type="password" [readonly]="isConfirmPasswordReadOnly" matInput #ConfirmPasswordInput formControlName="ConfirmPassword" [maxlength]="255" placeholder="Confirme sua senha" id="ConfirmPassword" [(ngModel)]="ConfirmPassword" required>
                       <mat-hint align="end">{{ConfirmPasswordInput.value?.length || 0}}/255</mat-hint>
                       <mat-error *ngIf="userForm.controls.ConfirmPassword.touched && userForm.controls.ConfirmPassword.invalid">
                           <span *ngIf="userForm.controls.ConfirmPassword.errors?.required">É necessário confirmar a senha.</span>
@@ -226,7 +226,7 @@
                 <ng-container matColumnDef="Options">
                   <th mat-header-cell *matHeaderCellDef> </th>
                   <td mat-cell *matCellDef="let row">
-                    <button mat-icon-button color="warn" title="Remover" (click)="findUserResourceToDelete(row.ID)" style="float:right;"><i class="fa-solid fa-trash"></i></button>
+                    <button mat-icon-button color="warn" title="Remover" [disabled]="isButtonDeleteResourceDisabled" (click)="findUserResourceToDelete(row.ID)" style="float:right;"><i class="fa-solid fa-trash"></i></button>
                   </td>
                 </ng-container>
 
@@ -244,7 +244,7 @@
           </div>
 
           <button mat-fab id="add-phone-btn" class="float-btn create-button" (click)="openAddScreensDialog()"
-            aria-label="Add button" matTooltip="Inserir Recursos" matTooltipPosition="above">
+            aria-label="Add button" matTooltip="Inserir Recursos" matTooltipPosition="above" [hidden]="isButtonAddResourceHidden">
             <mat-icon>add</mat-icon>
           </button>
         </mat-tab>
