--- a/VaccineC/src/app/pages/gerenciar-usuarios/user-resource-add-dialog.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/user-resource-add-dialog.html
@@ -23,5 +23,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancelar</button>
-  <button mat-button cdkFocusInitial (click)="saveUserResource()">Salvar</button>
+  <button mat-button cdkFocusInitial (click)="saveUserResource()" class="create-button">Salvar</button>
 </mat-dialog-actions>
