--- a/VaccineC/src/app/pages/empresa/empresas.component.html
+++ b/VaccineC/src/app/pages/empresa/empresas.component.html
@@ -66,7 +66,7 @@
                                  mat-sort-header> Empresa </th>
                             <td mat-cell
                                 *matCellDef="let row">
-                                {{row.CompanyName}} </td>
+                                {{row.Person.Name}} </td>
                         </ng-container>
 
                         <!-- Id Hidden Column -->
