--- a/VaccineC/src/app/pages/empresa/empresas.component.html
+++ b/VaccineC/src/app/pages/empresa/empresas.component.html
@@ -13,9 +13,9 @@
                                         appearance="outline">
                             <mat-label>Digite o nome da Empresa</mat-label>
                             <input matInput
+                                   [(ngModel)]="searchCompanyName"
                                    id="searchCompanyName"
                                    type="text"
-                                   [(ngModel)]="searchCompanyName"
                                    placeholder="(mínimo 3 caracteres)">
                             <button *ngIf="value"
                                      matSuffix
@@ -60,7 +60,7 @@
                            matSortDirection="asc">
 
                         <!-- Company Name Column -->
-                        <ng-container matColumnDef="CompanyName">
+                        <ng-container matColumnDef="Name">
                             <th *matHeaderCellDef
                                  mat-header-cell
                                  mat-sort-header> Empresa </th>
@@ -70,7 +70,7 @@
                         </ng-container>
 
                         <!-- Id Hidden Column -->
-                        <ng-container matColumnDef="CompanyID">
+                        <ng-container matColumnDef="ID">
                             <th *matHeaderCellDef
                                  mat-header-cell
                                  [hidden]="show"
@@ -78,21 +78,22 @@
                             <td mat-cell
                                 [hidden]="show"
                                 *matCellDef="let row">
-                                {{row.CompanyID}} </td>
+                                {{row.ID}} </td>
                         </ng-container>
 
-                        <ng-container matColumnDef="Options">
+                        <!-- <ng-container matColumnDef="Details">
                             <th mat-header-cell
                                 *matHeaderCellDef> </th>
-                            <td mat-cell *matCellDef="let row">
+                            <td mat-cell
+                                *matCellDef="let row">
                                 <button (click)="editCompany(row.ID); tabGroup.selectedIndex=1"
                                         mat-icon-button
                                         color="primary"
                                         title="Visualizar"><i
-                                        class="fa-solid fa-pen-to-square" ></i>
+                                        class="fa-solid fa-pen-to-square"></i>
                                 </button>
                             </td>
-                        </ng-container>
+                        </ng-container> -->
 
                         <tr mat-header-row
                             *matHeaderRowDef="displayedColumns"></tr>
@@ -115,6 +116,15 @@
                   <form [formGroup]="companyForm">
                     <div class="registration-group">
                         <div class="offset-sm-1 col-sm-11 p-0">
+
+                          <mat-form-field [hidden]="true">
+                            <input matInput
+                                   #NameCompanyID
+                                   formControlName="CompanyID"
+                                   id="companyID"
+                                   [(ngModel)]="companyID">
+                          </mat-form-field>
+
                             <div class="div-row-input">
 
                                 <mat-form-field appearance="fill"
@@ -122,7 +132,8 @@
                                     <mat-label>Pessoa</mat-label>
                                     <input (click)="searchPersonByAutoComplete()"
                                            type="text"
-                                           id="PersonId"
+                                           id="personId"
+                                           #PersonIdinput
                                            placeholder="Selecione a Pessoa Jurídica"
                                            aria-label="Number"
                                            matInput
@@ -131,11 +142,13 @@
                                            [matAutocomplete]="auto"
                                            [(ngModel)]="personId"
                                            required>
+                                        <mat-error *ngIf="companyForm.controls.PersonId.touched && companyForm.controls.PersonId.invalid">
+                                            <span *ngIf="companyForm.controls.PersonId.errors?.required">O campo é obrigatório.</span>
+                                        </mat-error>
                                     <mat-autocomplete #auto="matAutocomplete">
-                                        <mat-option *ngFor="let option of filteredOptions | async"
-                                                    [value]="option.Name">
-                                            {{option.Name}}
-                                        </mat-option>
+                                      <mat-option *ngFor="let option of filteredOptions | async" [value]="option.ID">
+                                        {{option.Name}}
+                                      </mat-option>
                                     </mat-autocomplete>
                                     <mat-icon matSuffix>search</mat-icon>
                                 </mat-form-field>
@@ -146,7 +159,13 @@
                                                 appearance="fill"
                                                 class="col-sm-11">
                                     <mat-label>Detalhes</mat-label>
-                                    <textarea matInput placeholder="Informações complementares" id="details"></textarea>
+                                    <textarea matInput
+                                              #UrlNameInput
+                                              formControlName="Details"
+                                              placeholder="Informações complementares"
+                                              id="details"
+                                              maxlength="255"
+                                              [(ngModel)]="details"></textarea>
                                 </mat-form-field>
                             </div>
 
@@ -171,12 +190,68 @@
                 </mat-tab>
 
                   <!-- PARAMETERS TAB -->
-                <mat-tab label="Parâmetros">
-                    <app-empresa-parametros></app-empresa-parametros>
+                <mat-tab label="Parâmetros" [disabled]="tabIsDisabled">
+
+                  <form>
+                    <div class="parameter-group">
+                        <div class="offset-sm-1 col-sm-11 p-0">
+                            <div class="div-row-input">
+                                <mat-form-field appearance="fill"
+                                                class="col-sm-6">
+                                    <mat-label>Tempo de Aplicação</mat-label>
+                                    <input type="number"
+                                           matInput
+                                           #input
+                                           maxlength="2"
+                                           placeholder="Ex. 10"
+                                           id="applicationTimePerMinute"
+                                           required="true">
+                                    <span matSuffix>min</span>
+
+                                </mat-form-field>
+                            </div>
+
+                            <div class="div-row-input">
+                                <mat-form-field appearance="fill"
+                                                class="col-sm-6">
+                                    <mat-label>Validade do Orçamento</mat-label>
+                                    <input type="number"
+                                           matInput
+                                           #input
+                                           maxlength="15"
+                                           placeholder="Ex. 30"
+                                           id="maximumDaysBudgetValidity"
+                                           required="true">
+                                    <span matSuffix>dias</span>
+                                </mat-form-field>
+                            </div>
+
+                            <div class="div-row-input">
+                              <mat-form-field appearance="fill" class="col-sm-2">
+                                <mat-label>Cor Horário Disponível</mat-label>
+                                <input type="color"
+                                       matInput
+                                       id="scheduleColor"
+                                       #ScheduleColorInput
+                                       formControlName="ScheduleColor"
+                                       [(ngModel)]="scheduleColor">
+                              </mat-form-field>
+                            </div>
+
+                            <div class="div-row-input registration-button-row">
+                                <button mat-raised-button
+                                        class="create-button">
+                                  <span class="fa-solid fa-floppy-disk me-1 w-20px"></span>
+                                  <span>Salvar</span>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
                 </mat-tab>
 
                   <!-- SCHEDULLE TAB -->
-                <mat-tab label="Agenda">
+                <mat-tab label="Agenda" [disabled]="tabIsDisabled">
                     <app-empresa-agenda></app-empresa-agenda>
                     <button (click)="openScheduleDialog()"
                             class="float-btn create-button"
