--- a/VaccineC/src/app/pages/empresa/empresas.component.html
+++ b/VaccineC/src/app/pages/empresa/empresas.component.html
@@ -81,7 +81,7 @@
                                 {{row.ID}} </td>
                         </ng-container>
 
-                        <!-- <ng-container matColumnDef="Details">
+                        <ng-container matColumnDef="Options">
                             <th mat-header-cell
                                 *matHeaderCellDef> </th>
                             <td mat-cell
@@ -93,7 +93,7 @@
                                         class="fa-solid fa-pen-to-square"></i>
                                 </button>
                             </td>
-                        </ng-container> -->
+                        </ng-container>
 
                         <tr mat-header-row
                             *matHeaderRowDef="displayedColumns"></tr>
@@ -126,7 +126,6 @@
                           </mat-form-field>
 
                             <div class="div-row-input">
-
                                 <mat-form-field appearance="fill"
                                                 class="col-sm-11">
                                     <mat-label>Pessoa</mat-label>
