--- a/VaccineC/src/app/pages/empresa/confirm-company-remove-dialog.html
+++ b/VaccineC/src/app/pages/empresa/confirm-company-remove-dialog.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Excluir</h2>
 <mat-dialog-content class="mat-typography">
-    <p>Tem certeza que deseja excluir essa empresa?</p>
+    <p>Tem certeza que deseja excluir essa Empresa?</p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-flat-button
