--- a/VaccineC/src/app/pages/empresa/empresas.component.scss
+++ b/VaccineC/src/app/pages/empresa/empresas.component.scss
@@ -1,18 +1,3 @@
-:host ::ng-deep .mat-tab-body-wrapper {
-    height: 100% !important;
-}
-
-:host ::ng-deep .mat-tab-group {
-    height: 100% !important;
-}
-
-.float-btn {
-    z-index: 100;
-    position: absolute;
-    bottom: 24px;
-    right: 36px;
-}
-
 .search-group {
   display: flex;
   flex-direction: row;
@@ -22,11 +7,73 @@
   margin-bottom: 2rem;
 }
 
+.search-table-content {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+:host ::ng-deep .search-group .mat-form-field-wrapper {
+  padding: 0px;
+}
+
 .mat-button-entry {
   margin-bottom: 0px !important;
   align-self: center !important;
 }
 
-.parameter-group {
-  font-size: 14px;
+form {
+  width: 100% !important;
+}
+
+.spinner-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button-container {
+  display: inline-block;
+  position: relative;
+  margin-bottom: 0px !important;
+  align-self: center !important;
+}
+
+.spinner{
+  display: flex;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.search-button {
+  height: 40px;
+  bottom: 6px;
+  margin-left: 5px;
+}
+
+.edit-button {
+  height: 40px;
+  bottom: 6px;
+  margin-left: 10px;
+}
+
+.float-btn {
+  z-index: 100;
+  position: absolute;
+  bottom: 24px;
+  right: 36px;
+}
+
+:host ::ng-deep .mat-tab-body-wrapper {
+  height: 100% !important;
+}
+
+:host ::ng-deep .mat-tab-group {
+  height: 100% !important;
 }
